force-app/main/default/objects/Visit__c/fields/Agenda_For_This_Visit__c.field-meta.xml
<CustomField>
    <fullName>Agenda_For_This_Visit__c</fullName>
    <label>Agenda For This Visit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>