force-app/main/default/objects/Visit__c/fields/Check_In_Image__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Image__c</fullName>
    <label>Check In Image</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>