force-app/main/default/objects/Visit__c/fields/Check_In_Place__c.field-meta.xml
<CustomField>
    <fullName>Check_In_Place__c</fullName>
    <label>Check In Place</label>
    <type>TextArea</type>
</CustomField>