force-app/main/default/objects/Visit__c/fields/Check_Out_Place__c.field-meta.xml
<CustomField>
    <fullName>Check_Out_Place__c</fullName>
    <label>Check Out Place</label>
    <type>TextArea</type>
</CustomField>