force-app/main/default/objects/Visit__c/fields/Discussion_happened_With_customer__c.field-meta.xml
<CustomField>
    <fullName>Discussion_happened_With_customer__c</fullName>
    <label>Discussion happened With customer</label>
    <type>TextArea</type>
</CustomField>