force-app/main/default/objects/Visit__c/fields/Invested_Time_In_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Invested_Time_In_Minutes__c</fullName>
    <formula>Check_Out_Time__c -  Check_In_Time__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invested Time (In Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>